# reactor-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  crates.js  help.html  index.html  index.md  lingua-franca-ref.txt  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: rust.yml
array_macro/: all.html  index.html  macro.array.html  sidebar-items.js
atomic_refcell/: all.html  index.html  struct.AtomicRef.html  struct.AtomicRefCell.html  struct.AtomicRefMut.html  struct.BorrowError.html  struct.BorrowMutError.html
benches/: README.md  SavinaPong.lf  savina_pong.rs
benches/micro/: dmsort.rs  exec_reactions.rs  global_id.rs  level_assignment.rs
crossbeam_channel/: all.html  fn.after.html  fn.at.html  fn.bounded.html  fn.never.html  fn.tick.html  fn.unbounded.html  fn.unbounded_reconnectable.html  index.html  sidebar-items.js  struct.IntoIter.html  struct.Iter.html  struct.Receiver.html  struct.ReconnectableReceiver.html  struct.Sender.html  struct.TryIter.html
crossbeam_channel/channel/: fn.unbounded_reconnectable.html  struct.ReconnectableReceiver.html
docs/: all.html  enum.AssemblyError.html  enum.Offset.html  enum.TimeUnit.html  enum.TriggerId.html  fn.try_parse_duration.html  index.html  macro.after.html  macro.assert_tag_is!.html  macro.assert_tag_is.html  macro.delay.html  macro.tag.html  macro.unsafe_iter_bank.html  sidebar-items.js  struct.AssemblyCtx.html  struct.AssemblyError.html  struct.ComponentCreator.html  struct.Duration.html  struct.EventTag.html  struct.GlobalId.html  struct.GlobalReactionId.html  struct.Instant.html  struct.LocalReactionId.html  struct.LogicalAction.html  struct.MicroStep.html  struct.MultiPort.html  struct.PhysicalAction.html  struct.PhysicalActionRef.html  struct.PhysicalInstant.html  struct.PhysicalSchedulerLink.html  struct.Port.html  struct.PortBank.html  struct.ReactionCtx.html  struct.ReactorId.html  struct.ReadableMultiPort.html  struct.ReadablePort.html  struct.ReadablePortBank.html  struct.SchedulerOptions.html  struct.SyncScheduler.html  struct.Timer.html  (+10 more)
docs/actions/: struct.Action.html  struct.PhysicalAction.html
docs/assembly/: index.html  macro.unsafe_iter_bank.html  struct.AssemblyCtx.html  struct.AssemblyError.html  struct.ComponentCreator.html  struct.DependencyDeclarator.html  struct.GlobalReactionId.html  struct.TriggerId.html  trait.ReactorInitializer.html  type.AssemblyResult.html
docs/error/: enum.AssemblyError.html  struct.AssemblyError.html  type.AssemblyResult.html
docs/ids/: struct.GlobalReactionId.html  struct.ReactorId.html  type.PortId.html
docs/ports/: struct.MultiPort.html  struct.WritablePort.html  type.MultiPort.html
docs/prelude/: index.html  sidebar-items.js  struct.Duration.html  struct.EventTag.html  struct.Instant.html  struct.LogicalAction.html  struct.PhysicalActionRef.html  struct.PhysicalInstant.html  struct.ReactionCtx.html  struct.ReadablePort.html  struct.Timer.html  struct.WritablePort.html
docs/timers/: struct.Timer.html
docs/triggers/: struct.TriggerId.html  trait.ReactionTrigger.html
docs/util/: enum.TimeUnit.html
examples/Minimal/: Cargo.toml
examples/src/: CounterProgram.lf  KeyboardEvents.lf  Maze.lf  MazeProgram.lf  Snake.lf  maze.rs  snakes.rs
implementors/index_vec/: trait.Idx.js
index_vec/: all.html  index.html  macro.define_index_type.html  macro.index_box.html  macro.index_vec.html  struct.IndexSlice.html  struct.IndexVec.html  trait.Idx.html  trait.IdxRangeBounds.html  trait.IdxSliceIndex.html  type.IndexBox.html
petgraph/: all.html  index.html
petgraph/adj/: index.html  struct.EdgeIndex.html  struct.EdgeIndices.html  struct.EdgeReference.html  struct.EdgeReferences.html  struct.List.html  struct.Neighbors.html  struct.OutgoingEdgeIndices.html  struct.OutgoingEdgeReferences.html  type.NodeIndex.html
petgraph/algo/: fn.condensation.html
petgraph/csr/: index.html  struct.Csr.html  struct.EdgeReference.html  struct.EdgeReferences.html  struct.Edges.html  struct.Neighbors.html  struct.NodeIdentifiers.html  struct.NodeReferences.html
petgraph/data/: trait.Build.html  trait.Create.html  trait.DataMap.html  trait.DataMapMut.html  trait.FromElements.html
petgraph/graph/: struct.Edge.html  (+21 more)
reactor_rt/: all.html  enum.Offset.html  enum.TimeUnit.html  enum.TriggerId.html  fn.try_parse_duration.html  index.html  macro.after!.html  macro.after.html  macro.assert_tag_is.html  macro.delay!.html  macro.delay.html  macro.tag.html  macro.unsafe_iter_bank.html  sidebar-items.js  struct.Action.html  struct.AssemblyCtx.html  struct.AsyncCtx.html  struct.Duration.html  struct.EventTag.html  struct.GlobalId.html  struct.GlobalReactionId.html  struct.Instant.html  struct.LocalReactionId.html  struct.LogicalAction.html  struct.MicroStep.html  struct.Multiport.html  struct.PhysicalAction.html  struct.PhysicalActionRef.html  struct.PhysicalInstant.html  struct.PhysicalSchedulerLink.html  struct.Port.html  struct.PortBank.html  struct.ReactionCtx.html  struct.ReactorId.html  struct.ReadablePort.html  struct.ReadablePortBank.html  struct.SchedulerOptions.html  struct.SyncScheduler.html  struct.Timer.html  struct.WritablePort.html  (+6 more)
runtime/: Cargo.toml
runtime/benches/: SavinaPong.lf
runtime/benches/micro/: exec_reactions.rs  global_id.rs
runtime/src/: actions.rs  timers.rs  triggers.rs
runtime/src/scheduler/: assembly_impl.rs  dependencies.rs  scheduler_impl.rs
runtime/src/test/: testutil.rs
runtime/src/util/: mod.rs
src/: actions.rs  assembly.rs  components.rs  debug.rs  error.rs  event_queue.rs  ids.rs  lib.rs  main.rs  port.rs  ports.rs  reactions.rs  scheduler.rs  time.rs  timers.rs  triggers.rs  util.rs  values.rs
vecmap/: Cargo.toml  README.md  all.html  enum.Entry.html  index.html  sidebar-items.js  struct.KeyRef.html  struct.OccupiedEntry.html  struct.VacantEntry.html  struct.VecMap.html  vecmap-rlib.mlcfg
vecmap/creusot/: Cargo.toml  Makefile  rust-toolchain  vecmap-rlib.mlcfg  vecmap_creusot-rlib.mlcfg
vecmap/creusot/src/: lib.rs
vecmap/creusot/vecmap_creusot-rlib/: why3session.xml
(+309 files in other folders)
