[package]
name = "reactor_rt"
version = "0.1.0"
authors = ["Clément Fournier <clement.fournier76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
index_vec = "0.1"
#itertools = "0.10.1"
#bit-set = "0.5"
smallvec = { version = "1.6", features = ["const_generics"] }
petgraph = "0.6"
array-macro = "2.1"
atomic_refcell = "0.1"
crossbeam-utils = "0.8"
crossbeam-channel = { git = "https://github.com/oowekyala/crossbeam.git", branch = "reconnectable-channel" }
rayon = { version = "1.5", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
assert_matches = "1.5"
regex = { version = "1" }

[features]
# dump the graph to a DOT representation
graph-dump=["regex"]
test-utils=[]
parallel-runtime=["rayon"]

[[bench]]
name = "savina_pong"
harness = false

[profile.release]
debug = true

