[package]
name = "reactor_rt"
version = "0.1.0"
authors = ["Clément Fournier <clement.fournier76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
index_vec = "0.1"
#itertools = "0.10.1"
#bit-set = "0.5"
smallvec = { version = "1.6", features = ["const_generics"] }
petgraph = "0.6"
array-macro = "2.1"
atomic_refcell = "0.1"
crossbeam-utils = "0.8"
crossbeam-channel = { git = "https://github.com/oowekyala/crossbeam.git", rev = "9eed66904f969156dedad4eef61ce91d23b9cccb" }
static_assertions = "1.1.0"
rayon = { version = "1.5", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
assert_matches = "1.5"

[features]
# dump the graph to a DOT representation
parallel-runtime=["rayon"]
no-unsafe=[]
# used only for benchmarking
public-internals=[]

[[bench]]
name = "savina_pong"
harness = false

[[bench]]
name = "global_id"
path = "benches/micro/global_id.rs"
harness = false

[[bench]]
name = "exec_reactions"
path = "benches/micro/exec_reactions.rs"
harness = false

[profile.bench]
debug = true

