[package]
name = "reactor_rt"
version = "0.1.0"
authors = ["Clément Fournier <clement.fournier76@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
index_vec = "0.1"
#itertools = "0.10.1"
#bit-set = "0.5"
smallvec = { version = "1.6", features = ["const_generics"] }
petgraph = "0.6"
array-macro = "2.1"
atomic_refcell = "0.1"
crossbeam-utils = "0.8"

#crossbeam-channel = "0.5"
crossbeam-channel = { git = "https://github.com/revol-xut/crossbeam.git", rev = "ec3e41474109b61ff447fb3b456d9972ab10f513" }
static_assertions = "1.1.0"
rayon = { version = "1.5", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
assert_matches = "1.5"
dmsort = "1.0.1"

[features]
default=["vec-id-sets"]
# Enable the parallel runtime implementation todo make default
parallel-runtime=["rayon"]
# Enables 64-bit wide reaction ids on 64 bit architectures.
# This may reduce performance, but allows for 2^32 reactor
# instances compared to the default of 2^16, which may feel
# a bit tight for some applications.
wide-ids=[]
vec-id-sets=[]
no-unsafe=[]
# used internally for benchmarking, to access private APIs
public-internals=[]

[[bench]]
name = "savina_pong"
harness = false

[[bench]]
name = "global_id"
path = "benches/micro/global_id.rs"
required-features = ["public-internals"]
harness = false

[[bench]]
name = "dmsort"
path = "benches/micro/dmsort.rs"
required-features = ["public-internals"]
harness = false

[[bench]]
name = "exec_reactions"
path = "benches/micro/exec_reactions.rs"
required-features = ["public-internals"]
harness = false

[profile.bench]
debug = true

